Micronatu AWS 2.0.0 contains improvements to ease the creation of Alexa Skills with Micronaut:

- Creation of Alexa Skills as http services. 
- Creation of Flash Briefing skills. 
- Easier creation of SSML.

Check the <<alexa, Alexa>> section to learn more. 

See the section <<breaks, Breaking Changes>> to ease into the migration to Micronaut AWS 2.x